fix: :lipstick: Fix background color for modal on dark mode
Add values for modal variables in dark mode, background and color, fix color of close icon in dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,3 +43,9 @@ a,
     /* overflow-y: hidden; */
   }
 }
+
+
+[data-theme="dark"] [data-jd-modal-close] svg {
+  fill: #f9fafb !important;
+}
+
